fix(slack): fix typos

--- a/_posts/2015-03-12-slack.md
+++ b/_posts/2015-03-12-slack.md
@@ -11,7 +11,7 @@ summary:    Пост о том, как мы организовали свой Sl
 
 Однажды нам стало недостаточно скайпа. Хотелось найти что-то, где бы мы смогли стереть границы расстояний и чувствовать друг друга ближе; где общение было бы лёгким и непринужденным; где можно было бы решать разные проблемы оперативно и силой всей компании. Так мы нашли [Slack](http://bit.ly/1Mu3ujA).
 
-Сначала нас очень завела идея иметь интеграции разных сервисов прямо в чат. Уже тогда мы начали активно пользоваться Trello, хотя самым проблемным было общение команды при работа на GitHub. Если на проекте было больше двух человек, скайп-чат по проекту превращался примерно в такой разговор:
+Сначала нас очень завела идея иметь интеграции разных сервисов прямо в чат. Уже тогда мы начали активно пользоваться Trello, хотя самым проблемным было общение команды при работе на GitHub. Если на проекте было больше двух человек, скайп-чат по проекту превращался примерно в такой разговор:
 
 <blockquote>
 <p>— Когда задачу сделаешь?</p>
@@ -66,7 +66,7 @@ Chat было создан для того, чтобы сбрасывать па
 
 <p>— Очень высокая цена для небольших (а мы все же небольшая) компаний без возможности снизить цену, например, храня историю переписки на своих серверах;</p>
 <p>— Когда каналов становится много, появляется необходимость в их более изощрённой фильтрации;</p>
-<p>— Аудио- и видео-звонков из коробки;</p>
+<p>— Нет аудио- и видео-звонков из коробки;</p>
 <p>— Лежащая перед глазами wiki. Хоть Slack и предоставляет сниппеты и слак-посты, на самом деле они не очень удобные в использовании;</p>
 <p>— Было бы круто видеть интеграцию со скайпом (да, мы знаем, что проще на Луну слетать, чем уговорить Microsoft открыть API), когда можно получать сообщения прямо в Slack и отвечать на них там же.</p>
 
