fix(slack): fix typos

--- a/_posts/2015-03-12-slack.md
+++ b/_posts/2015-03-12-slack.md
@@ -67,7 +67,7 @@ Chat было создан для того, чтобы сбрасывать па
 <p>— Очень высокая цена для небольших (а мы все же небольшая) компаний без возможности снизить цену, например, храня историю переписки на своих серверах;</p>
 <p>— Когда каналов становится много, появляется необходимость в их более изощрённой фильтрации;</p>
 <p>— Нет аудио- и видео-звонков из коробки;</p>
-<p>— Лежащая перед глазами wiki. Хоть Slack и предоставляет сниппеты и слак-посты, на самом деле они не очень удобные в использовании;</p>
+<p>— Нет лежащей перед глазами wiki. Хоть Slack и предоставляет сниппеты и слак-посты, на самом деле они не очень удобные в использовании;</p>
 <p>— Было бы круто видеть интеграцию со скайпом (да, мы знаем, что проще на Луну слетать, чем уговорить Microsoft открыть API), когда можно получать сообщения прямо в Slack и отвечать на них там же.</p>
 
 В любом случае, каналы в Slack позволили нам создать единую сеть для оперативной взаимопомощи, коллективных размышлений и развлечений. Да, нам тяжело на бесплатном аккаунте и без видео-звонков, но Slack определённо прекрасен и стоит того, чтобы перейти на него раз и до следующего крутого стартапа.
