обновил глупый заголовок

--- a/_posts/2015-04-21-npm-init.md
+++ b/_posts/2015-04-21-npm-init.md
@@ -17,7 +17,7 @@ date:       2015-04-27 02:30:00
 [init]: https://docs.npmjs.com/cli/init
 [pkg]: https://docs.npmjs.com/files/package.json
 
-## Переменный для `npm init`
+## Переменные для `npm init`
 
 Настройте их! Эти переменные будут использоваться при каждом запуске `npm init`,
 а значит будут экономить вам время. После установки они сохраняются
