fix(npm-init): fix missed quotes

--- a/_posts/2015-04-21-npm-init.md
+++ b/_posts/2015-04-21-npm-init.md
@@ -28,7 +28,7 @@ date:       2015-04-27 02:30:00
 
 ```
 npm set init-author-email iamstarkov@gmail.com
-npm set init-author-name Vladimir Starkov
+npm set init-author-name 'Vladimir Starkov'
 npm set init-author-url http://iamstarkov.com/
 npm set init-license MIT
 npm set init-version 0.0.0
