fix(vpn-post): move images to repository

--- a/_posts/2015-11-21-vpn.md
+++ b/_posts/2015-11-21-vpn.md
@@ -5,7 +5,7 @@ date:       2015-11-21 14:32:00
 summary:    Или как поднять и настроить свой VPN сервер
 ---
 
-![](https://www.dropbox.com/s/lqvrkfv7hzba3sj/pavel.png?dl=1)
+![](/images/pazanov.png)
 
 Всем привет! С вами один из ведущих разработчиков CSSSR и просто путешественник. 
 
@@ -15,7 +15,7 @@ summary:    Или как поднять и настроить свой VPN се
 
 При поиске средств для развертывания VPN самым важным было охватить все устройства, которые оказываются в моем чемодане во время путешествий. Ноутбук (Windows + Ubuntu), телефоны iPhone, Windows Phone, Android и с недавних пор MacBook Air. Все они поддерживают L2TP/IPSec, но иногда возникает необходимость подключиться через OpenVPN или SSTP. Посмотрев множество решений, в конце концов я остановился на **[SoftEther VPN](http://www.softether.org/)**, разработанном в японском университете Tsukuba. 
 
-![](https://www.dropbox.com/s/vvrk49j8ne6jp9p/sofether.jpg?dl=1)
+![](/images/vpn/sofether.jpg)
 
 #### Выбор сервера и страны размещения
 
@@ -27,7 +27,7 @@ summary:    Или как поднять и настроить свой VPN се
 
 Для начала создаем новый Droplet в DigitalOcean. Я выбрал сервер за 5$ на базе Ubuntu 14 и разместил его в Нью-Йорке, это заняло у меня всего 30 секунд:
 
-![](https://www.dropbox.com/s/in1clmew9pllh6j/server.png?dl=1)
+![](/images/vpn/server.png)
 
 Первым делом обновляем пакеты:
 
@@ -135,7 +135,7 @@ Default Virtual HUB in a case of omitting the HUB on the Username: csssrhub
 
 #### L2TP подключение в iOS
 
-![](https://www.dropbox.com/s/pega31b4wzolgae/ios.png?dl=1)
+![](/images/vpn/ios.png)
 
 Настройка Android и Windows Phone производится аналогично. Для MacOS настройки также отличаются не очень сильно.
 
@@ -143,15 +143,15 @@ Default Virtual HUB in a case of omitting the HUB on the Username: csssrhub
 
 В Windows создаем обычное VPN подключение и затем настраиваем его. 
 
-![](https://www.dropbox.com/s/er85n7wg0i3vghe/1.png?dl=1)
+![](/images/vpn/1.png)
 
 В свойствах подключения меняем тип на L2TP/IPSec:
 
-![](https://www.dropbox.com/s/co9ts7jvwpqvls9/6.png?dl=1)
+![](/images/vpn/6.png)
 
 И указываем Shared Key в дополнительных настройках:
 
-![](https://www.dropbox.com/s/oegnqjmwti1de1e/7.png?dl=1)
+![](/images/vpn/7.png)
 
 Всё готово! 
 
