--- a/_posts/2016-07-01-habits.md
+++ b/_posts/2016-07-01-habits.md
@@ -5,7 +5,7 @@ date:    2016-07-01
 summary: Привычки, которые помогают мне жить и работать.
 ---
 
-Всем привет! Меня зовут Никита, и я работаю в кузнице фронтенда [CSSSR](http://csssr.ru).
+Всем привет! Меня зовут Никита, и я работаю в кузнице фронтенда <a target="_blank" href="http://csssr.ru" target="_blank">CSSSR</a>.
 
 Офиса у нас нет, работаем все удалённо. Удалённая работа — это, конечно, круто, но есть в ней и серьёзные сложности: доступность прокрастинации и соблазн забить на здоровье. Поэтому мне пришлось потратить немало времени на организацию как рабочего процесса, так и своего быта. Стоит отметить, что по натуре я человек ленивый и крайне не люблю заморачиваться, поэтому только и делаю, что заморачиваюсь, как бы поменьше заморачиваться. Результатом этого процесса и являются все эти системы и привычки, которые я постепенно и итеративно вводил и продолжаю вводить в свою жизнь.
 
@@ -16,7 +16,7 @@ summary: Привычки, которые помогают мне жить и р
 #### Помодоро
 Думаю, все слышали про Помодоро. Этой системой я пользуюсь непрерывно уже больше года, и для меня она работает идеально. Часто решение какой-то застрявшей задачи приходит именно в момент перерыва, да так, что приходится скорее бежать к блокноту.
 
-В качестве таймера я использую [Be Focused Pro](https://itunes.apple.com/ru/app/be-focused-pro-focus-timer/id961632517), но можно использовать любое другое приложения — они все почти одинаковые. Тайминги использую такие: 30 минут работы и 6 минут перерыв. Вычислил их опытным путём. Наиболее впечатляющим был переход от 5-минутного перерыва к 6. Как ни странно, увеличение всего на 1 минуту качественно улучшило отдых. Впрочем, это не просто минута, а как никак 20%. А главный принцип моего Помодоро-перерыва — это «прочь от компа», или «работаешь сидя — отдыхай стоя», как завещал Маяковский.
+В качестве таймера я использую <a target="_blank" href="https://itunes.apple.com/ru/app/be-focused-pro-focus-timer/id961632517">Be Focused Pro</a>, но можно использовать любое другое приложения — они все почти одинаковые. Тайминги использую такие: 30 минут работы и 6 минут перерыв. Вычислил их опытным путём. Наиболее впечатляющим был переход от 5-минутного перерыва к 6. Как ни странно, увеличение всего на 1 минуту качественно улучшило отдых. Впрочем, это не просто минута, а как никак 20%. А главный принцип моего Помодоро-перерыва — это «прочь от компа», или «работаешь сидя — отдыхай стоя», как завещал Маяковский.
 
 #### Листочки
 Джиры и трелло — это, конечно, хорошо, но ничего нет удобнее бумаги и ручки. Поэтому на столе я держу стопку белых листочков и выписываю на них текущие задачи. Обычно активных листков сразу несколько: большие задачи на день, напоминания, декомпозиция текущей задачи. Помимо листочков я держу под рукой и альбом А4, в котором удобно разбить задачу на части для оценки или набросать алгоритм.
@@ -38,13 +38,13 @@ summary: Привычки, которые помогают мне жить и р
 
 ![](http://s.csssr.ru/Focus.numbers_2016_2206_113302.png)
 
-Если заинтересовались, то можете скачать шаблон для Numbers: https://yadi.sk/d/JGVi7lSAsqJGv
+Если заинтересовались, то можете скачать шаблон для Numbers: <a target="_blank" href="https://yadi.sk/d/JGVi7lSAsqJGv">https://yadi.sk/d/JGVi7lSAsqJGv</a>
 
 #### Ночныe таймеры
-Чтобы было меньше проблем со сном, добавил в календарь на каждый день два события: в 23:00 «хватит играть», а в 00:30 — «выключай интернет». Ложусь я где-то в час-два, так что оставшегося времени без интернета вполне хватает на чтение открытых за день вкладок или чего-нибудь посерьёзнее. Справляться с интернетом помогает программа [SelfControl](https://selfcontrolapp.com/), которая намертво вырубает его на ноуте. На телефоне интернет остаётся, но им я не злоупотребляю. В крайнем случае можно выдернуть роутер из розетки.
+Чтобы было меньше проблем со сном, добавил в календарь на каждый день два события: в 23:00 «хватит играть», а в 00:30 — «выключай интернет». Ложусь я где-то в час-два, так что оставшегося времени без интернета вполне хватает на чтение открытых за день вкладок или чего-нибудь посерьёзнее. Справляться с интернетом помогает программа <a target="_blank" href="https://selfcontrolapp.com/">SelfControl</a>, которая намертво вырубает его на ноуте. На телефоне интернет остаётся, но им я не злоупотребляю. В крайнем случае можно выдернуть роутер из розетки.
 
 #### GTD
-Принцип GTD (Getting Things Done) прост — задачи лучше держать не в голове, а на бумаге. Правда, я для этих целей использую не бумагу, а [Things](https://culturedcode.com/things) — простой и удобный туду-лист с шустрой синхронизацией между мобильным и десктопным приложениями. Помимо заметок на будущее я в них заношу задачи, которые привязаны к какой-то дате, но не настолько жёстко, чтобы добавлять событие в календарь. Плюс в них есть механизм для повторяющихся задач: например, «прогуляться 30 минут» появляется каждый день, а «отправить показания счётчиков» — каждый месяц. Самая удобная для меня фича — это интеграция в маковский Notification Center:
+Принцип GTD (Getting Things Done) прост — задачи лучше держать не в голове, а на бумаге. Правда, я для этих целей использую не бумагу, а <a target="_blank" href="https://culturedcode.com/things">Things</a> — простой и удобный туду-лист с шустрой синхронизацией между мобильным и десктопным приложениями. Помимо заметок на будущее я в них заношу задачи, которые привязаны к какой-то дате, но не настолько жёстко, чтобы добавлять событие в календарь. Плюс в них есть механизм для повторяющихся задач: например, «прогуляться 30 минут» появляется каждый день, а «отправить показания счётчиков» — каждый месяц. Самая удобная для меня фича — это интеграция в маковский Notification Center:
 
 ![](http://s.csssr.ru/NotificationTableWindow_2016_2406_114827.png)
 
@@ -52,13 +52,12 @@ summary: Привычки, которые помогают мне жить и р
 
 ### Здоровье
 
-#### Прогулки (каждый день) и пробежки (каждую неделю)
-[Нассим Талеб](http://www.litres.ru/nassim-nikolas-taleb) в своих книгах много говорит об идее антихрупкости. Применительно к здоровью она звучит примерно так: оптимальным подходом к здоровью являются регулярные умеренные нагрузки в сочетании с менее регулярными и даже несколько спонтанными (чтобы тело не могло к ним привыкнуть) нагрузками более серьёзными. И вот по этой схеме я каждый день отправляюсь на прогулку, а раз-два в неделю — на пробежку.
+#### Прогулки (каждый день) и пробежки (каждую неделю) <a target="_blank" href="http://www.litres.ru/nassim-nikolas-taleb">Нассим Талеб</a> в своих книгах много говорит об идее антихрупкости. Применительно к здоровью она звучит примерно так: оптимальным подходом к здоровью являются регулярные умеренные нагрузки в сочетании с менее регулярными и даже несколько спонтанными (чтобы тело не могло к ним привыкнуть) нагрузками более серьёзными. И вот по этой схеме я каждый день отправляюсь на прогулку, а раз-два в неделю — на пробежку.
 
-[Говорят](https://www.youtube.com/watch?v=aUaInS6HIGo), что даже 30 минут активности в день уже достаточно, чтобы избежать проблем с сердцем и много чем ещё. Надеюсь, так и есть, но в любом случае и полчаса лучше, чем ничего. Что касается бега, то когда-то пробовал бегать каждый день, но в итоге начали болеть колени, да и к бегу потихоньку начала копиться неприязнь. А вот одного раза в неделю оказалось достаточно, чтобы и поддерживать себя в форме, и получать от пробежек удовольствие. Следуя тому же принципу антихрупкости, могу себе позволить один раз в неделю полениться и вообще не выходить из дома, если есть такое желание.
+<a target="_blank" href="https://www.youtube.com/watch?v=aUaInS6HIGo">Говорят</a>, что даже 30 минут активности в день уже достаточно, чтобы избежать проблем с сердцем и много чем ещё. Надеюсь, так и есть, но в любом случае и полчаса лучше, чем ничего. Что касается бега, то когда-то пробовал бегать каждый день, но в итоге начали болеть колени, да и к бегу потихоньку начала копиться неприязнь. А вот одного раза в неделю оказалось достаточно, чтобы и поддерживать себя в форме, и получать от пробежек удовольствие. Следуя тому же принципу антихрупкости, могу себе позволить один раз в неделю полениться и вообще не выходить из дома, если есть такое желание.
 
 #### Планка (каждый день)
-Много раз пытался встроить ежедневные занятия йогой/цигуном в свою жизнь. Сейчас пришёл к понимаю, что чем короче программа, тем лучше. Поэтому собрал себе 5-минутную программу с одной лишь только планкой. Собрал её в приложении [Yoga.com](https://itunes.apple.com/us/app/yoga.com-300-poses-video-classes/id653453499). Теперь всё, что от меня требуется, — это нажать кнопку «старт», а дальше упражнения будут одно за другим переключаться по таймеру.
+Много раз пытался встроить ежедневные занятия йогой/цигуном в свою жизнь. Сейчас пришёл к понимаю, что чем короче программа, тем лучше. Поэтому собрал себе 5-минутную программу с одной лишь только планкой. Собрал её в приложении <a target="_blank" href="https://itunes.apple.com/us/app/yoga.com-300-poses-video-classes/id653453499">Yoga.com</a>. Теперь всё, что от меня требуется, — это нажать кнопку «старт», а дальше упражнения будут одно за другим переключаться по таймеру.
 
 За основу я взял упражнения с картинки ниже. Время пришлось поставить поменьше, но по мере тренировок потихоньку прибавляю.
 
@@ -68,11 +67,11 @@ summary: Привычки, которые помогают мне жить и р
 Много говорилось о плюсах медитации, но явно выделить, чем же она помогает, сложно. Подход тут такой: если тема интересует, надо пробовать. Если нет, то и пользы никакой не будет, только раздражение. Опять же пробовал разные системы и медитации, но снова пришёл к простому: в программе, где я делаю планку, есть галочка «помедитировать после выполнения программы». Теперь я после планки сижу 5 минут в медитации. Кстати, если неудобно, то медитировать можно даже сидя на стуле. Суть не в том, чтобы сидеть в лотосе, а в том, чтобы спина была прямая и телу было удобно.
 
 #### Зарядка для шеи, спины, глаз (каждый рабочий день)
-Когда привык к системе Помодоро, можно начать экспериментировать с перерывами. Например, один-два перерыва можно потратить на разминку. Простые упражнения для шеи и спины: наклоны, повороты, вращения, как на физкультуре в школе. Мне нравится делать всё это под музыку, которая либо и так играет, либо включаю её на время перерыва. Сюда же можно отнести и упражнения для глаз: я наклеил на окно наш логотип с улыбающимся Гагариным (кстати, [закажите и себе!](https://twitter.com/csssr_dev/status/657155537310756864)) и смотрю то на него, то в космос. И глаза тренирует, и настроение поднимает.
+Когда привык к системе Помодоро, можно начать экспериментировать с перерывами. Например, один-два перерыва можно потратить на разминку. Простые упражнения для шеи и спины: наклоны, повороты, вращения, как на физкультуре в школе. Мне нравится делать всё это под музыку, которая либо и так играет, либо включаю её на время перерыва. Сюда же можно отнести и упражнения для глаз: я наклеил на окно наш логотип с улыбающимся Гагариным (кстати, <a target="_blank" href="https://twitter.com/csssr_dev/status/657155537310756864">закажите и себе!</a>) и смотрю то на него, то в космос. И глаза тренирует, и настроение поднимает.
 
 ### Honorable mentions
-* [Bee](neat.io/bee) — приятный клиент для Джиры.
-* [YNAB 4](https://www.youneedabudget.com/) — планирование и ведение бюджета. Никогда бы не подумал, что буду вести бюджет, но с этим подходом всё получилось. Единственная проблема — вышла новая версия по подписке, но старую всё ещё можно купить [в Стиме](http://store.steampowered.com/app/227320).
+* <a target="_blank" href="http://www.neat.io/bee/">Bee</a> — приятный клиент для Джиры.
+* <a target="_blank" href="https://www.youneedabudget.com/">YNAB 4</a> — планирование и ведение бюджета. Никогда бы не подумал, что буду вести бюджет, но с этим подходом всё получилось. Единственная проблема — вышла новая версия по подписке, но старую всё ещё можно купить <a target="_blank" href="http://store.steampowered.com/app/227320">в Стиме</a>.
 * Мультиварка (у меня Tefal RK812132) — чего стоит только режим «крупа», в котором даже таймер выставлять не надо.
 * Spotify — готовые плэйлисты на все случаи жизни: есть целый раздел ”Focus”.
 * Хорошая клавиатура — сейчас пользуюсь Apple Magic Keyboard, до этого была Das Keyboard Model S Ultimate Clicky. Работать, конечно, можно за любой, но для меня тактильные ощущения от печати добавляют удовольствия от процесса работы. Да так, что порой в конце рабочего дня с клавиатурой не хочется расставаться.
