fix(post): heading collapsing with text

--- a/_posts/2016-07-01-habits.md
+++ b/_posts/2016-07-01-habits.md
@@ -52,7 +52,8 @@ summary: Привычки, которые помогают мне жить и р
 
 ### Здоровье
 
-#### Прогулки (каждый день) и пробежки (каждую неделю) <a target="_blank" href="http://www.litres.ru/nassim-nikolas-taleb">Нассим Талеб</a> в своих книгах много говорит об идее антихрупкости. Применительно к здоровью она звучит примерно так: оптимальным подходом к здоровью являются регулярные умеренные нагрузки в сочетании с менее регулярными и даже несколько спонтанными (чтобы тело не могло к ним привыкнуть) нагрузками более серьёзными. И вот по этой схеме я каждый день отправляюсь на прогулку, а раз-два в неделю — на пробежку.
+#### Прогулки (каждый день) и пробежки (каждую неделю)
+<a target="_blank" href="http://www.litres.ru/nassim-nikolas-taleb">Нассим Талеб</a> в своих книгах много говорит об идее антихрупкости. Применительно к здоровью она звучит примерно так: оптимальным подходом к здоровью являются регулярные умеренные нагрузки в сочетании с менее регулярными и даже несколько спонтанными (чтобы тело не могло к ним привыкнуть) нагрузками более серьёзными. И вот по этой схеме я каждый день отправляюсь на прогулку, а раз-два в неделю — на пробежку.
 
 <a target="_blank" href="https://www.youtube.com/watch?v=aUaInS6HIGo">Говорят</a>, что даже 30 минут активности в день уже достаточно, чтобы избежать проблем с сердцем и много чем ещё. Надеюсь, так и есть, но в любом случае и полчаса лучше, чем ничего. Что касается бега, то когда-то пробовал бегать каждый день, но в итоге начали болеть колени, да и к бегу потихоньку начала копиться неприязнь. А вот одного раза в неделю оказалось достаточно, чтобы и поддерживать себя в форме, и получать от пробежек удовольствие. Следуя тому же принципу антихрупкости, могу себе позволить один раз в неделю полениться и вообще не выходить из дома, если есть такое желание.
 
