fix(post): add text to download link

--- a/_posts/2016-07-01-habits.md
+++ b/_posts/2016-07-01-habits.md
@@ -38,7 +38,7 @@ summary: Привычки, которые помогают мне жить и р
 
 ![](http://s.csssr.ru/Focus.numbers_2016_2206_113302.png)
 
-Если заинтересовались, то можете скачать шаблон для Numbers: <a target="_blank" href="https://yadi.sk/d/JGVi7lSAsqJGv">https://yadi.sk/d/JGVi7lSAsqJGv</a>
+Если заинтересовались, то можете скачать <a target="_blank" href="https://yadi.sk/d/JGVi7lSAsqJGv">шаблон для Numbers</a>.
 
 #### Ночныe таймеры
 Чтобы было меньше проблем со сном, добавил в календарь на каждый день два события: в 23:00 «хватит играть», а в 00:30 — «выключай интернет». Ложусь я где-то в час-два, так что оставшегося времени без интернета вполне хватает на чтение открытых за день вкладок или чего-нибудь посерьёзнее. Справляться с интернетом помогает программа <a target="_blank" href="https://selfcontrolapp.com/">SelfControl</a>, которая намертво вырубает его на ноуте. На телефоне интернет остаётся, но им я не злоупотребляю. В крайнем случае можно выдернуть роутер из розетки.
