fix(post): fix post about lenses

--- a/_posts/2016-07-03-lenses.md
+++ b/_posts/2016-07-03-lenses.md
@@ -1,11 +1,21 @@
 ---
 layout:  post
-title:   Используем линзы для работы с иммутабельными данными
+title:   Использование линз на реальных примерах
 date:    2016-07-03
 summary: Учимся преодолевать сложности в работе с иммутабельными данными при помощи концепции линз
 ---
 
-Всем привет. Меня зовут Андрей и я JS-разработчик команды "Восход". Иммутабельные данные последнее время переживают всплеск популярности во фронтенде - причиной тому является проблема "определения изменений"(change detection) которую так или иначе пытается решать любой JS фреймворк или инфраструктура. Тотальное использование иммутабельных данных является одним из способов решать данную проблему - в частности он является основным в ReactJS сообществе. Однако любой кто пытался использовать иммутабельные данные сталкивался с проблемой "глубоких" изменений во вложенных структурах. Давайте попытаемся понять на реальных примерах в чем же проблема и можем ли мы как то ее решить.
+Всем привет. Меня зовут Андрей и я JS-разработчик команды "Восход". В своей работе мне часто приходится иметь дело с иммутабельными данными имеющими 
+сложную иерархическую структуру - и не могу сказать что делать это стандартными способами удобно и просто. Поэтому в поисках лучшего решения я пришел к такой интересной концепции как линзы.
+Предлагаю вам несколько приближенных к реальности примеров использования этой концепции.
+
+## Но зачем?
+
+Иммутабельные данные последнее время переживают всплеск популярности во фронтенде - отправной точкой этого можно считать [эту статью](http://swannodette.github.io/2013/12/17/the-future-of-javascript-mvcs).
+Основной причиной тому является проблема "определения изменений"(change detection) которую так или иначе пытается решать любой JS фреймворк или инфраструктура.
+Тотальное использование иммутабельных данных является одним из способов решать данную проблему - в частности он является основным в [ReactJS сообществе](https://github.com/facebook/immutable-js/#the-case-for-immutability).
+Однако, любой кто пытался использовать иммутабельные данные сталкивался с проблемой "глубоких" изменений во вложенных структурах.
+Давайте попытаемся понять на реальных примерах в чем же проблема и можем ли мы как то ее решить.
 
 
 ## Начнем с простого
@@ -33,10 +43,10 @@ Object.assign(
 ```
 То есть, переходя от мутабельных структур к иммутабельным, мы теряем в лаконичности
  и читабельности кода. Естественно функциональное сообщество не могло этого допустить и в нем родилась такая концепция как линзы.
-Что есть линза? Было замечено, чтобы иммутабельно установить значение, необходимо знать,
- как его прочитать - как до него добратся.
-Давайте тогда хранить функции для чтения и установки значения вместе в одной сущности,
- a назовем это - линзой. Звучит-то ведь классно!
+Что есть линза? Было замечено - чтобы иммутабельно установить значение, необходимо знать,
+ как его прочитать(как до него добратся).
+Следовательно будет разумно хранить функции для чтения и установки значения вместе - в одной сущности,
+ и назвали эту сущность линзой.
 
 Таким образом линза состоит из:
 
@@ -45,7 +55,7 @@ Object.assign(
 
 Для создания линз мы будем использовать функцию `lens` из библиотеки [ramda](http://ramdajs.com/0.21.0/docs/#lens).
 Первый ее аргумент - `getter`, второй - `setter`.
-Простой пример определение линзы lensProp для аттрибута обьекта:
+Простой пример - определение линзы lensProp для аттрибута обьекта:
 
 ```javascript
 const lensProp = prop => lens(
@@ -93,17 +103,17 @@ const a = {key: 2},
 Ну вроде все есть - теперь вернемся к примеру. Напишем наше преобразование, используя `lensProp`:
 
 ```javascript
-const setProps = (state, action) =>  over(
+const setProps = (state, action) => over(
     lensProp('rangeSlider'),
     slider => ({...slider, ...pick(['from', 'to', 'left', 'right'], action.payload)}),
     state
 )
 ```
-Получается чуть-чуть лаконичнее и без каких-либо повторений.
-Однако, лаконичность - это не главное. Главное - это композируемость.
+Получается чуть-чуть лаконичнее, и что очень важно без каких-либо повторений - нет дублирования имени аттрибута обьекта(`rangeSlider`).
+Это просто следствие главного свойства линз - композируемости.
 Линзы - это пример отлично композируемой абстракции.
 
-А давайте теперь сделаем линзу для работы с аттрибутом `from` у `rangeSlider`.
+Давайте теперь сделаем линзу для работы с аттрибутом `from` у `rangeSlider`.
 Вынесем линзу для работы с `rangeSlider` в переменную:
 
 ```javascript
@@ -163,7 +173,7 @@ const lensRangeSliderFrom = lensPath(['rangeSlider', 'from'])
 
 ## Перейдем к примеру посложнее
 
-Представим, что есть вот такая структурка:
+Представим, что есть вот такая структура:
 
 ```javascript
 const struct = {
@@ -199,6 +209,7 @@ const lensUsers = lensProp('users')
 Окей, а дальше нам надо как-то научиться работать с конкретным юзером, зная его `id`.
 Необходимо написать функцию, которая будет получать `id` юзера и возвращать линзу для этого юзера.
 Как говорилось ранее, линза состоит из двух функций - `getter` и `setter`. Давайте определим обе:
+
 - `getter` должен получать на вход массив и возврашать юзера с определенным `id`. Напишем функцию, которая создает такую функцию для определенного `id`:
 
 ```javascript
@@ -251,7 +262,7 @@ const lensUserNameById = id => compose(
     lensName
 )
 ```
-Выглядит довольно декларативно, правда?)
+Выглядит довольно декларативно.
 Давайте попробуем функцию в деле:
  
 ```javascript
@@ -490,7 +501,7 @@ const setProps = (state, action) =>  over(
 ```
 Мы немного схитрили и использовали `over`, чтобы смержить значение из `state.rangeSlider` со значениями из `action.payload`.
 Но ведь эту операцию также можно вынести в отдельную линзу - так как любую операцию с данными можно вынести в линзу.
-Собственно предлагаю сделать это вам. Необходимо написать определение функции `lensByPick`, которая будет работать так:
+Предлагаю сделать это вам самим. Необходимо написать определение функции `lensByPick`, которая будет работать так:
 
 ```javascript
 const data = {
@@ -542,7 +553,7 @@ const setProps = (state, action) => set(
 )
 ```
 
-## Полезные ссылки про управление данными
+## Несколько полезных ссылок про работу с данными
 
 - [Ramda](http://ramdajs.com/0.21.0/index.html) - функциональный набор утилит для Javascript(аналог Lodash), который я использовал в примерах
 - [partial.lenses](https://github.com/calmm-js/partial.lenses) - альтернативная реализация линз для Javascript с более удобным API и не нарушающая [законы композиции линз](https://github.com/calmm-js/partial.lenses#motivation) ([полиция Хаскелля](http://stackoverflow.com/questions/6399648/what-happens-to-you-if-you-break-the-monad-laws#comment7515341_6399648) не дремлет!)
