fix(post): clearing post about lenses

--- a/_posts/2016-07-03-lenses.md
+++ b/_posts/2016-07-03-lenses.md
@@ -556,7 +556,7 @@ const setProps = (state, action) => set(
 ## Несколько полезных ссылок про работу с данными
 
 - <a href="http://ramdajs.com/0.21.0/index.html" target="_blank">Ramda</a> - функциональный набор утилит для Javascript(аналог Lodash), который я использовал в примерах
-- <a href="https://github.com/calmm-js/partial.lenses" target="_blank">partial.lenses</a> - альтернативная реализация линз для Javascript с более удобным API и не нарушающая <a href="https://github.com/calmm-js/partial.lenses#motivation" target="_blank">законы композиции линз</a> (<a href="http://stackoverflow.com/questions/6399648/what-happens-to-you-if-you-break-the-monad-laws#comment7515341_6399648" target="_blank">полиция Хаскелля</a> не дремлет!)
+- <a href="https://github.com/calmm-js/partial.lenses" target="_blank">partial.lenses</a> - альтернативная реализация линз для Javascript с более удобным и <a href="https://github.com/calmm-js/partial.lenses#motivation" target="_blank">согласованным</a> API
 - <a href="https://github.com/facebook/immutable-js" target="_blank">Immutable-js</a> и <a href="https://github.com/swannodette/mori" target="_blank">Mori</a> - я использовал термин "иммутабельные данные" по отношению к plain js структурам. Терминологически это не очень верно. Immutable и Mori это как раз две очень хороших реализации иммутабельных структур данных(или по другому "чисто функциональных структур данных"). Они расходуют меньше памяти, дают меньше ложно отрицательных сравнений(когда ссылка изменилась, а сама структура нет) и мутирующие операции в них работают зачастую быстрее, но взамен мы получаем более медленное чтение.
 - <a href="https://github.com/tonsky/datascript" target="_blank">Datascript</a> - возможно если у вас очень сложные данные с множеством связей(в том числе и многие-ко-многим) вам захочется хранить их в чем то более-менее
  напоминающем базу данных со связями, индексами, и языком запросов(Осторожно: внутри много Clojure и Datalog!). <a href="https://github.com/typeetfunc/datascript-mori" target="_blank">Биндинг для Javascript</a>
