--- a/_posts/2016-07-08-lenses.md
+++ b/_posts/2016-07-08-lenses.md
@@ -5,11 +5,11 @@ date:    2016-07-08
 summary: Учимся преодолевать сложности в работе с иммутабельными данными при помощи концепции линз
 ---
 
-Всем привет! Меня зовут Андрей, и я JavaSript-разработчик команды «Восход». В своей работе мне часто приходится иметь дело с иммутабельными данными, имеющими сложную иерархическую структуру, и использование стандартных средств для этого мне показалось довольно неудобным. В итоге в поисках лучшего решения я пришел к такой интересной концепции как линзы.
+Всем привет! Меня зовут Андрей, и я Javascript-разработчик команды «Восход». В своей работе мне часто приходится иметь дело с иммутабельными данными, имеющими сложную иерархическую структуру, и использование стандартных средств для этого мне показалось довольно неудобным. В итоге в поисках лучшего решения я пришел к такой интересной концепции как линзы.
 
 ### Про иммутабельные данные
 
-Иммутабельные данные последнее время переживают всплеск популярности во фронтенде; отправной точкой можно считать <a href="http://swannodette.github.io/2013/12/17/the-future-of-javascript-mvcs" target="_blank">эту статью</a>. Основной причиной всплеска является проблема «определения изменений» (change detection), которую так или иначе пытается решать любой JavaScript-фреймворк или инфраструктура. Тотальное использование иммутабельных данных — это один из способов её решения; в частности оно является основным в <a href="https://github.com/facebook/immutable-js/#the-case-for-immutability" target="_blank">ReactJS сообществе</a>.
+Иммутабельные данные последнее время переживают всплеск популярности во фронтенде; отправной точкой можно считать <a href="http://swannodette.github.io/2013/12/17/the-future-of-javascript-mvcs" target="_blank">эту статью</a>. Основной причиной всплеска является проблема «определения изменений» (change detection), которую так или иначе пытается решать любой Javascript-фреймворк или инфраструктура. Тотальное использование иммутабельных данных — это один из способов её решения; в частности оно является основным в <a href="https://github.com/facebook/immutable-js/#the-case-for-immutability" target="_blank">ReactJS сообществе</a>.
 
 Однако, при попытке использовать иммутабельные данные появляется проблема с «глубокими» изменениями во вложенных структурах. Предлагаю разобраться на реальных примерах, в чем же проблема и можем ли мы как-то её решить.
 
