--- a/_posts/2016-07-08-lenses.md
+++ b/_posts/2016-07-08-lenses.md
@@ -562,3 +562,5 @@ const setProps = (state, action) => set(
 - <a href="https://codewords.recurse.com/issues/six/immutability-is-not-enough" target="_blank">Immutability is not enough</a> — хорошая статья о том, что многие ошибки управления данными, которые присутсвуют в мутабельном коде, перешли и в иммутабельный.
 
 Спасибо за внимание!
+
+Вот мой <a href="https://github.com/typeetfunc" target="_blank">профиль на github</a>, а связаться со мной можно в твиттере - <a href="https://twitter.com/bracketsarrows" target="_blank">@bracketsarrows</a>
