fix(post): fix contact info  in post about lenses

--- a/_posts/2016-07-08-lenses.md
+++ b/_posts/2016-07-08-lenses.md
@@ -563,4 +563,4 @@ const setProps = (state, action) => set(
 
 Спасибо за внимание!
 
-Вот мой <a href="https://github.com/typeetfunc" target="_blank">профиль на github</a>, а связаться со мной можно в твиттере - <a href="https://twitter.com/bracketsarrows" target="_blank">@bracketsarrows</a>
+Возникшие вопросы можно задавать в комментариях или сразу мне в твиттер - <a href="https://twitter.com/bracketsarrows" target="_blank">@bracketsarrows</a>
