fix(post): fix contact info in post about lenses

--- a/_posts/2016-07-08-lenses.md
+++ b/_posts/2016-07-08-lenses.md
@@ -563,4 +563,4 @@ const setProps = (state, action) => set(
 
 Спасибо за внимание!
 
-Возникшие вопросы можно задавать в комментариях или сразу мне в твиттер - <a href="https://twitter.com/bracketsarrows" target="_blank">@bracketsarrows</a>
+Возникшие вопросы можно задавать в комментариях или мне в твиттере - <a href="https://twitter.com/bracketsarrows" target="_blank">@bracketsarrows</a>
