fix(styles): change blog styles

--- a/404.md
+++ b/404.md
@@ -3,10 +3,16 @@ layout: center
 permalink: /404.html
 ---
 
-# 404
+<div class="not-found">
+	<p class="shrug">
+		¯\_(ツ)_/¯
+	</p>
 
-Sorry, we can't seem to find this page's pixylls.
+	<p class="info">
+		Нам жаль, товарищ!
+	</p>
 
-<div class="mt3">
-	<a href="/" class="button button-blue button-big">Home</a>
+	<h1>
+		Ошибка 404
+	</h1>
 </div>
